--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-treeview": "^0.4.7",
+    "react-window": "^1.8.10",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
