--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
     "react-icons": "^4.8.0",
+    "react-paginate": "^8.2.0",
     "react-pdf": "^6.2.2",
     "react-pdf-with-onclick": "^2.0.20",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "react-treeview": "^0.4.7",
     "react-window": "^1.8.10",
     "styled-components": "^5.3.8",
