--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"axios": "^1.3.4",
 		"bootstrap": "^5.2.3",
 		"install": "^0.13.0",
+		"js-cookie": "^3.0.5",
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
+		"react-alert": "^7.0.3",
 		"react-bootstrap": "^2.7.2",
 		"react-bootstrap-typeahead": "^6.3.2",
 		"react-calendar": "^4.0.0",
